--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "react-scripts build",
-    "Client": "cd ../ && npm start",
-    "Server": "nodemon server.js",
-    "dev": "concurrently \"npm run Client\" \"npm run Server\"",
-    "start": "node server.js"
+    "start": "node server.js",
+    "client": "npm start --prefix ./client",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm start\" \"npm run client\""
+    
   },
   "keywords": [],
   "author": "",
